<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="konkuk.yeonj.paymanager.ui.calendar.CalendarFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_work"
        android:name="konkuk.yeonj.paymanager.ui.work.WorkFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="konkuk.yeonj.paymanager.ui.setting.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" />
</navigation>