<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.CalendarFragment">


    <TextView
        android:id="@+id/calendarMonthText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="2020년 11월"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:gravity="center"
        android:id="@+id/day1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/sun"
        app:layout_constraintEnd_toStartOf="@+id/day2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarMonthText" />

    <TextView
        android:gravity="center"
        android:id="@+id/day2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mon"
        app:layout_constraintBottom_toBottomOf="@id/day1"
        app:layout_constraintEnd_toStartOf="@+id/day3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/day1"
        app:layout_constraintTop_toTopOf="@id/day1" />

    <TextView
        android:gravity="center"
        android:id="@+id/day3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tue"
        app:layout_constraintBottom_toBottomOf="@id/day1"
        app:layout_constraintEnd_toStartOf="@+id/day4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day2"
        app:layout_constraintTop_toTopOf="@id/day1" />

    <TextView
        android:gravity="center"
        android:id="@+id/day4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wed"
        app:layout_constraintBottom_toBottomOf="@id/day1"
        app:layout_constraintEnd_toStartOf="@+id/day5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day3"
        app:layout_constraintTop_toTopOf="@id/day1" />

    <TextView
        android:gravity="center"
        android:id="@+id/day5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/thu"
        app:layout_constraintBottom_toBottomOf="@id/day1"
        app:layout_constraintEnd_toStartOf="@+id/day6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day4"
        app:layout_constraintTop_toTopOf="@id/day1" />

    <TextView
        android:gravity="center"
        android:id="@+id/day6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/fri"
        app:layout_constraintBottom_toBottomOf="@id/day1"
        app:layout_constraintEnd_toStartOf="@+id/day7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day5"
        app:layout_constraintTop_toTopOf="@id/day1" />

    <TextView
        android:gravity="center"
        android:id="@+id/day7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sat"
        app:layout_constraintBottom_toBottomOf="@id/day1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day6"
        app:layout_constraintTop_toTopOf="@id/day1" />

    <com.kizitonwose.calendarview.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cv_dayViewResource="@layout/calendar_day_layout"
        app:cv_scrollMode="paged"
        app:cv_orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workRView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/placeRView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/placeRView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workRView" />



</androidx.constraintlayout.widget.ConstraintLayout>